# MasimoRoot

./: .gitignore  CMakeLists.txt  IAP.cpp  IAP.h  IAPClient.cpp  IAPClient.h  IAPProtocol.cpp  IAPProtocol.h  MasimoRoot.cbp  README.md  Root.cpp  Root.h  SerialPort.cpp  SerialPort.h  Socket.cpp  Socket.h  main.cpp
response_message/: AckResponse.cpp  AckResponse.h  ChannelId.h  ChannelWaveformDataResponse.cpp  ChannelWaveformDataResponse.h  ChannelWaveformResponse.cpp  ChannelWaveformResponse.h  DataGroup.h  DataGroupResponse.cpp  DataGroupResponse.h  NakResponse.cpp  NakResponse.h  ProtocolRevisionResponse.cpp  ProtocolRevisionResponse.h  ResponseMessage.cpp  ResponseMessage.h  UnknownResponse.cpp  UnknownResponse.h
